[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "interpolation_uncertainty"
version = "0.0.1"
description = "Python Codes for testing various Uncertainty Estimation methods"
requires-python = ">=3.10"
dependencies = [
    "gdal<3.12",
    "matplotlib",
    "numpy",
    "pillow",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "tqdm",
]
authors = [
  {name = "Francis Corpuz", email = "francis.corpuz@noaa.gov"},
  {name = "Glen Rice", email = "glen.rice@noaa.gov"},
  {name = "Elias Adediran", email = "elias.adediran@unh.edu"},
]
readme = "README.md"
license = "CC0-1.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Oceanography",
]

[project.urls]
Homepage = "https://nauticalcharts.noaa.gov/learn/nbs.html"

[dependency-groups]
dev = [
    "ipykernel",
    "jupyterlab",
    "pytest",
]

